--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,13 @@ services:
         - RUN_MODE=docker
         - MONGO_HOST=mongo
     ports:
-        3000:3000
+        - 3000:3000
     depends_on:
         - mongodb
 
   mongodb:
     image: mongo
-    EXPOSE: 27017
+    expose:
+         - 27017
     volumes:
-          /OSM/MEL/LW_OZNOME/workflowdoc/mongodb-data: /data/db #makes sure any data is persisted on machine between container up/downs.
+         - /OSM/MEL/LW_OZNOME/workflowdoc/mongodb-data: /data/db
